--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Allard Wen Shi Personal Website</title>
+		<title>MedimAS Workshop</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,15 +16,20 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
+					<span class="image avatar"><img src="images/avatar1.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Allard Wen Shi</a></h1>
-					<p>I am a senior student in Xi'an Jiaotong University and interested in research concerning dynamic brain network and medical imaging informatics<br/></p>
+					<p>I am currently a senior student in Xi'an Jiaotong University and interested in research concerning dynamic brain network and medical imaging.<br/></p>
+				</header>
+				<header>
+					<span class="image avatar"><img src="images/avatar2.jpg" alt="" /></span>
+					<h1 id="logo"><a href="#">Soupee Yamin Li</a></h1>
+					<p>I am currently a senior student in Xi'an Jiaotong University and enthusiastic about enuroengineering and medical imaging informatics.<br/></p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">Welcome</a></li>
-						<li><a href="#two">Personal Information</a></li>
-						<li><a href="#three">Personal Activities</a></li>
+						<li><a href="#two">Workshop Information</a></li>
+						<li><a href="#three">Activities</a></li>
 						<li><a href="#four">Accomplishments</a></li>
 					</ul>
 				</nav>
@@ -52,8 +57,8 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>Welcome to my world!</h2>
-										<p>This is a website introducing myself.<br />
+										<h2>Welcome to our world!</h2>
+										<p>This is a website introducing ourselves.<br />
 										Wechat public number:&nbsp <a href="https://mp.weixin.qq.com/">MedimAS</a></p>
 									</header>
 									<p>Medical imaging promotes cross-disciplinary development in medicine and biology. Machine Learning is a powerful tool to mine information in  big data. Neuroscience tunes them together and innovates the way you see the world.</p>
@@ -63,15 +68,13 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Personal Information</h3>
+									<h3>Workshop Information</h3>
 									<p></p>
 									<ul class="feature-icons">
-										<li class="fa-code">Write all the code</li>
-										<li class="fa-cubes">Stack small boxes</li>
-										<li class="fa-book">Read books and stuff</li>
-										<li class="fa-coffee">Drink much coffee</li>
-										<li class="fa-bolt">Lightning bolt</li>
-										<li class="fa-users">Shadow clone technique</li>
+										<li class="fa-code">Foundation Time: 2018.08</li>
+										<li class="fa-cubes">Topic: Imaging and Neuroengineering</li>
+										<li class="fa-book">Group member: Allard; Soupee; </li>
+										<li class="fa-coffee">Motto: Imagination, Motivation, Aesthetic, Great, Enthusiam  </li>
 									</ul>
 								</div>
 							</section>
@@ -79,22 +82,29 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Personal Activities</h3>
-									<p>Delighted to share my story to you.</p>
+									<h3>Activities</h3>
+									<p>Delighted to share our stories to you.</p>
 									<p>The topic of 2018: Adventure and Devotion</p>
 									<div class="features">
 										<article>
+											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Outstanding Undergraduate Paragon Finalist</h4>
+												<p>Lucky to be chosen as a candidate of outstanding undergraduate student in Xi'an Jiaotong University! Though not selected as the final ten students, I am highly fortunate to know the other outstanding peers. Thanks for my family, Yamin, classmates and those paying close attention to me! Fighting forever!</p>
+											</div>
+										</article>
+										<article>
 											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>Outstanding Undergraduate Student Mention</h4>
-												<p>Lucky to be chosen as a candidate of outstanding undergraduate student in Xi'an Jiaotong University! Though not selected as the final ten students, I am highly fortunate to know the other outstanding peers. Thanks for my family, classmates and those paying close attention to me! Fighting forever!</p>
+												<h4>UCLA - CSST program</h4>
+												<p>Great team and topic on localization and prediction of prostate cancer biopsy! Appreciate the help from Prof. Corey, Karthik and other lab members. Hope to see all of you again! Thanks for CSST program. A beautiful college and wonderful place for us to live and research. </p>
 											</div>
 										</article>
 										<article>
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
-												<h4>UCLA - CSST program</h4>
-												<p>Great team and topic on localization and prediction of prostate cancer biopsy! Appreciate the help from Prof. Corey, Karthik and other lab members. Hope to see all of you again! Thanks for CSST program. A beautiful college and wonderful place for us to live and research. </p>
+												<h4>PET co-inventor Prof. Phelps</h4>
+												<p>It's my honor to meet you and listen to your story. Positron Emission Computed Tomography (PET) was a great invention in human history. And it can be better if combined with more modalities. A good lecture of Prof. Phelps and a great boxer in his whole life!</p>
 											</div>
 										</article>
 									</div>
@@ -104,7 +114,29 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Accomplishments</h3>
+									<h3>Accomplishments and Honor</h3>
+									<div class = "container">
+									<h4>Allard Wen Shi</h4>
+									<span><b>2016.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
+									<span><b>2016.10</b>&nbsp Outstanding Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2016.12</b>&nbsp 1st prize in National College Mathematical Modeling Contest, Shaanxi Division</span></br>
+									<span><b>2017.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
+									<span><b>2017.10</b>&nbsp Outstanding Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2018.05</b>&nbsp Honorable Mention, COMAP Mathematical Contest in Modeling (MCM)</span></br>
+									<span><b>2018.06</b>&nbsp Cross-disciplinary Scholars in Science and Technology (CSST) Scholarship </br>
+									&emsp;&emsp;&emsp;&emsp; (5343 USD), University of California, Los Angeles (UCLA)</span></br>
+									<span><b>2018.10</b>&nbsp Outstanding Undergraduate Student Paragon Fanalist, Xi’an Jiaotong University </br>
+									&emsp;&emsp;&emsp;&emsp; (Top 0.1% among undergraduate students in the university)</span></br>
+									<span><b>2018.10</b>&nbsp Special Grade Scholarship, Xi’an Jiaotong University </br>
+									&emsp;&emsp;&emsp;&emsp; (20 Top Undergraduate Students Per Year)</span></br>
+									<span><b>2018.10</b>&nbsp Outstanding Student Leader, Xi’an Jiaotong University</span></br>
+									<p></p>
+									</div>
+								    <div class = "container">
+									<h4>Soupee Yamin Li</h4>
+									<p></p>
+									</div>
+									<>
 								</div>
 							</section>
 
@@ -445,7 +477,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; All rights reserved.HTML5 UP & Allard Shi</a></li>
+								<li>&copy; All rights reserved.HTML5 UP & Allard & Soupee</a></li>
 							</ul>
 						</div>
 					</section>
