--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 						<li><a href="#two">Workshop Information</a></li>
 						<li><a href="#three">Activities</a></li>
 						<li><a href="#four">Accomplishments</a></li>
+						<li><a href="#five">Publication</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -118,10 +119,10 @@
 									<div class = "container">
 									<h4>Allard Wen Shi</h4>
 									<span><b>2016.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
-									<span><b>2016.10</b>&nbsp Outstanding Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2016.10</b>&nbsp Excellent Student Leader, Xi’an Jiaotong University</span></br>
 									<span><b>2016.12</b>&nbsp 1st prize in National College Mathematical Modeling Contest, Shaanxi Division</span></br>
 									<span><b>2017.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
-									<span><b>2017.10</b>&nbsp Outstanding Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2017.10</b>&nbsp Excellent Student Leader, Xi’an Jiaotong University</span></br>
 									<span><b>2018.05</b>&nbsp Honorable Mention, COMAP Mathematical Contest in Modeling (MCM)</span></br>
 									<span><b>2018.06</b>&nbsp Cross-disciplinary Scholars in Science and Technology (CSST) Scholarship </br>
 									&emsp;&emsp;&emsp;&emsp; (5343 USD), University of California, Los Angeles (UCLA)</span></br>
@@ -134,12 +135,24 @@
 									</div>
 								    <div class = "container">
 									<h4>Soupee Yamin Li</h4>
+									<span><b>2016.10</b>&nbsp Excellent Student, Xi’an Jiaotong University</span></br>
+									<span><b>2017.10</b>&nbsp Excellent Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2018.05</b>&nbsp Honorable Mention, COMAP Mathematical Contest in Modeling (MCM)</span></br>
+									<span><b>2018.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
 									<p></p>
 									</div>
-									<>
 								</div>
 							</section>
-
+							
+							<section id="five">
+								<div class="container">
+									<h3>Publication</h3>
+									<div class = "container">
+									<span><b>[1]</b></span></br>
+									
+									</div>
+								</div>
+							</section>
 						<!-- Five -->
 						<!--
 							<section id="five">
