--- a/index.html
+++ b/index.html
@@ -130,14 +130,15 @@
 									&emsp;&emsp;&emsp;&emsp; (Top 0.1% among undergraduate students in the university)</span></br>
 									<span><b>2018.10</b>&nbsp Special Grade Scholarship, Xi’an Jiaotong University </br>
 									&emsp;&emsp;&emsp;&emsp; (20 Top Undergraduate Students Per Year)</span></br>
-									<span><b>2018.10</b>&nbsp Outstanding Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2018.10</b>&nbsp Excellent Student Leader, Xi’an Jiaotong University</span></br>
 									<p></p>
 									</div>
 								    <div class = "container">
 									<h4>Soupee Yamin Li</h4>
 									<span><b>2016.10</b>&nbsp Excellent Student, Xi’an Jiaotong University</span></br>
-									<span><b>2017.10</b>&nbsp Excellent Student Leader, Xi’an Jiaotong University</span></br>
+									<span><b>2017.10</b>&nbsp Excellent Student, Xi’an Jiaotong University</span></br>
 									<span><b>2018.05</b>&nbsp Honorable Mention, COMAP Mathematical Contest in Modeling (MCM)</span></br>
+									<span><b>2018.07</b>&nbsp 2018 POSTECH Open-lab Summer Internship Scholarship</span></br>
 									<span><b>2018.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
 									<p></p>
 									</div>
