Complement for activities

--- a/index.html
+++ b/index.html
@@ -108,6 +108,15 @@
 												<p>It's my honor to meet you and listen to your story. Positron Emission Computed Tomography (PET) was a great invention in human history. And it can be better if combined with more modalities. A good lecture of Prof. Phelps and a great boxer in his whole life!</p>
 											</div>
 										</article>
+										<article>
+											<a href="#" class="image"><img src="images/pic04(1).jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic04(2).jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic04(3).jpg" alt="" /></a>
+											<div class="inner">
+												<h4>Open-lab internship - POSTECH</h4>
+												<p>Amazing time spent in Korea. Lucky to have the chance of studying and reseaching in BOA Lab of Creative IT Engineering department. Appreciate the generous help of Hyojin, Sohyeon and other lab members as well as friends in this program. Look forward to seeing you guys again!</p>
+											</div>
+										</article>
 									</div>
 								</div>
 							</section>
@@ -140,6 +149,7 @@
 									<span><b>2018.05</b>&nbsp Honorable Mention, COMAP Mathematical Contest in Modeling (MCM)</span></br>
 									<span><b>2018.07</b>&nbsp 2018 POSTECH Open-lab Summer Internship Scholarship</span></br>
 									<span><b>2018.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
+									<span><b>2018.10</b>&nbsp Excellent Student, Xi’an Jiaotong University</span></br>
 									<p></p>
 									</div>
 								</div>
