--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li><a href="#one" class="active">Welcome</a></li>
 						<li><a href="#two">Workshop Information</a></li>
 						<li><a href="#three">Activities</a></li>
-						<li><a href="#four">Accomplishments</a></li>
+						<li><a href="#four">Accomplishment</a></li>
 						<li><a href="#five">Publication</a></li>
 					</ul>
 				</nav>
@@ -72,10 +72,10 @@
 									<h3>Workshop Information</h3>
 									<p></p>
 									<ul class="feature-icons">
-										<li class="fa-code">Foundation Time: 2018.08</li>
-										<li class="fa-cubes">Topic: Imaging and Neuroengineering</li>
-										<li class="fa-book">Group member: Allard; Soupee; </li>
-										<li class="fa-coffee">Motto: Imagination, Motivation, Aesthetic, Great, Enthusiam  </li>
+										<li class="fa-code"> Foundation Time: 2018.08</li>
+										<li class="fa-cubes"> Topic: Imaging and Neuroengineering</li>
+										<li class="fa-book"> Members: Allard; Soupee; </li>
+										<li class="fa-coffee"> Motto: Imagination, Motivation, Aesthetic, Great, Enthusiasm  </li>
 									</ul>
 								</div>
 							</section>
@@ -84,7 +84,6 @@
 							<section id="three">
 								<div class="container">
 									<h3>Activities</h3>
-									<p>Delighted to share our stories to you.</p>
 									<p>The topic of 2018: Adventure and Devotion</p>
 									<div class="features">
 										<article>
@@ -105,14 +104,24 @@
 											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>PET co-inventor Prof. Phelps</h4>
-												<p>It's my honor to meet you and listen to your story. Positron Emission Computed Tomography (PET) was a great invention in human history. And it can be better if combined with more modalities. A good lecture of Prof. Phelps and a great boxer in his whole life!</p>
+												<p>It's my honor to meet you and listen to your story. Positron Emission Computed Tomography (PET) was a great invention in human history. And it can get better if combined with more modalities. A good lecture by Prof. Phelps who is a great boxer in his whole life!</p>
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04(3).jpg" alt="" /></a>
+											<a href="#" class="image"><img src="images/pic04_1.JPG" alt="" /></a>
 											<div class="inner">
 												<h4>Open-lab internship - POSTECH</h4>
 												<p>Amazing time spent in Korea. Lucky to have the chance of studying and reseaching in BOA Lab of Creative IT Engineering department. Appreciate the generous help of Hyojin, Sohyeon and other lab members as well as friends in this program. Look forward to seeing you guys again!</p>
+											</div>
+										</article>
+									</div>
+								    <p>The topic of 2019: Harvest and Exploration</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="images/pic05.JPG" alt="" /></a>
+											<div class="inner">
+												<h4>Japan tour - Osaka, Kyoto, Nara and Tokyo </h4>
+												<p>An exhilarating trip to Japan. It is a modest and lovely country. We are lost in beautiful scene and tasty food. We've also been to Tokyo University, Kyoto University and Waseda University, which brings us strong university culture shock.  </p>
 											</div>
 										</article>
 									</div>
@@ -122,7 +131,7 @@
 						<!-- Four -->
 							<section id="four">
 								<div class="container">
-									<h3>Accomplishments and Honor</h3>
+									<h3>Accomplishment and Honor</h3>
 									<div class = "container">
 									<h4>Allard Wen Shi</h4>
 									<span><b>2016.10</b>&nbsp National Scholarship (Top 0.2% among Chinese Undergraduate Students)</span></br>
@@ -155,7 +164,7 @@
 							
 							<section id="five">
 								<div class="container">
-									<h3>Publication</h3>
+									<h3>Publications</h3>
 									<div class = "container">
 									<span><b>[1]</b></span></br>
 									
