--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Outstanding Undergraduate Paragon Finalist</h4>
-												<p>Lucky to be chosen as a candidate of outstanding undergraduate student in Xi'an Jiaotong University! Though not selected as the final ten students, I am highly fortunate to know the other outstanding peers. Thanks for my family, Yamin, classmates and those paying close attention to me! Fighting forever!</p>
+												<p>Lucky to be chosen as a candidate of outstanding undergraduate student in Xi'an Jiaotong University! Though not selected as the final ten students, I am highly fortunate to meet the other outstanding peers. Thanks for my family, Yamin, classmates and teachers paying close attention to me! Fighting forever!</p>
 											</div>
 										</article>
 									</div>
@@ -164,10 +164,18 @@
 							
 							<section id="five">
 								<div class="container">
-									<h3>Publications</h3>
+									<h3>Publication</h3>
+									<h4>Journal</h4>
 									<div class = "container">
-									<span><b>[1]</b></span></br>
-									
+									<span>[1] Tianqi Xu, Zhiwei Cui,<b> Wen Shi*</b>, Shan Wu, Yujin Zong, Gang Niu, Xijing He, Mingxi Wan, Siyuan Zhang. (2018). Time and Frequency Characteristics of Cavitation Activity Enhanced by Flowing Phase-shift Nanodroplets and Lipid-shelled Microbubbles during Focused Ultrasound Exposures. Ultrasound in Medicine and Biology (Under Review)</span></br>
+									</div>
+									</br>
+									<h4>Conference and workshops</h4>
+									<div class = "container">
+									<span>[1] Shuoqiu Gan, Lijun Bai,<b> Wen Shi*</b>, Yingxiang Sun, Ming Zhang.(2018). Mild Traumatic Brain Injury Accelerates Brain Aging at Acute Stage, Chinese Congress of Radiology 2018. ID1097429</span></br>
+									<span>[2] <b>Wen Shi*</b>, Karthik V. Sarma, Alex G. Raman, Alan M. Priester, Shyam Natarajan, William Speier, Steven S. Raman, Leonard S. Marks, Corey W. Arnold.(2018). Predication of Clinically Significant Prostate Cancer in MR/Ultrasound Guided Fusion Biopsy using Multiparametric MRI, Medical Imaging meets NeurIPS 2018 </span></br>
+									<span>[3] Alex G. Raman, Karthik V. Sarma,<b> Wen Shi*</b>, Steve Zhou, Alan M. Priester, Shyam Natarajan, William Speier, Steven S. Raman, Leonard S. Marks, Corey W. Arnold. (2018). A Machine Learning Model for Predicting Cancer Presence in Prostate Biopsy Targets using MRI, American Urological Association Annual Meeting 2019  </span></br>
+									<span>[4] Shuoqiu Gan, <b>Wen Shi*</b>, Yingxiang Sun, Lijun Bai, Ming Zhang. (2019). Mild traumatic brain injury accelerates progressive brain ageing, ISMRM 2019 (Submitted)  </span></br>
 									</div>
 								</div>
 							</section>
@@ -508,7 +516,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; All rights reserved.HTML5 UP & Allard & Soupee</a></li>
+								<li>&copy; All rights reserved. Allard & Soupee</a></li>
 							</ul>
 						</div>
 					</section>
