--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -167,15 +167,24 @@
 									<h3>Publication</h3>
 									<h4>Journal</h4>
 									<div class = "container">
-									<span>[1] Tianqi Xu, Zhiwei Cui,<b> Wen Shi*</b>, Shan Wu, Yujin Zong, Gang Niu, Xijing He, Mingxi Wan, Siyuan Zhang. (2018). Time and Frequency Characteristics of Cavitation Activity Enhanced by Flowing Phase-shift Nanodroplets and Lipid-shelled Microbubbles during Focused Ultrasound Exposures. Ultrasound in Medicine and Biology (Under Review)</span></br>
+									
+									<span>[1] Siyuan Zhang, Tianqi Xu, Zhiwei Cui,<b> Wen Shi*</b>, Shan Wu, Yujin Zong, Gang Niu, Xijing He, Mingxi Wan. (2019). Time and Frequency Characteristics of Cavitation Activity Enhanced by Flowing Phase-shift Nanodroplets and Lipid-shelled Microbubbles during Focused Ultrasound Exposures. <b> Ultrasound in Medicine and Biology </b> (In Press)</span></br>
+									<span>[2] <b> Wen Shi*</b>, Yamin Li, Zhian Liu, Jing Li, Xiangguo Yan, Gang Wang (2019) Non-canonical microstate becomes salient in high density EEG during propofol-induced altered states of consciousnes (Under review)</span></br>
+									<span>[3] Shuoqiu Gan, <b> Wen Shi*</b>, Yingxiang Sun, Lijun Bai, Ming Zhang (2019) Mild traumatic brain injury accelerates progressive brain ageing (Submitted)</span></br>
+									
 									</div>
 									</br>
 									<h4>Conference and workshops</h4>
 									<div class = "container">
-									<span>[1] Shuoqiu Gan, Lijun Bai,<b> Wen Shi*</b>, Yingxiang Sun, Ming Zhang.(2018). Mild Traumatic Brain Injury Accelerates Brain Aging at Acute Stage, Chinese Congress of Radiology 2018. ID1097429</span></br>
-									<span>[2] <b>Wen Shi*</b>, Karthik V. Sarma, Alex G. Raman, Alan M. Priester, Shyam Natarajan, William Speier, Steven S. Raman, Leonard S. Marks, Corey W. Arnold.(2018). Predication of Clinically Significant Prostate Cancer in MR/Ultrasound Guided Fusion Biopsy using Multiparametric MRI, Medical Imaging meets NeurIPS 2018 </span></br>
-									<span>[3] Alex G. Raman, Karthik V. Sarma,<b> Wen Shi*</b>, Steve Zhou, Alan M. Priester, Shyam Natarajan, William Speier, Steven S. Raman, Leonard S. Marks, Corey W. Arnold. (2018). A Machine Learning Model for Predicting Cancer Presence in Prostate Biopsy Targets using MRI, American Urological Association Annual Meeting 2019  </span></br>
-									<span>[4] Shuoqiu Gan, <b>Wen Shi*</b>, Yingxiang Sun, Lijun Bai, Ming Zhang. (2019). Mild traumatic brain injury accelerates progressive brain ageing, ISMRM 2019  </span></br>
+									<span>[1] Shuoqiu Gan, Lijun Bai,<b> Wen Shi*</b>, Yingxiang Sun, Ming Zhang.(2018). Mild Traumatic Brain Injury Accelerates Brain Aging at Acute Stage, <b> Chinese Congress of Radiology 2018 </b>. ID1097429</span></br>
+									<span>[2] <b>Wen Shi*</b>, Karthik V. Sarma, Alex G. Raman, Alan M. Priester, Shyam Natarajan, William Speier, Steven S. Raman, Leonard S. Marks, Corey W. Arnold.(2018). Predication of Clinically Significant Prostate Cancer in MR/Ultrasound Guided Fusion Biopsy using Multiparametric MRI, <b> Medical Imaging meets NeurIPS 2018 </b>.
+									<a href="https://sites.google.com/view/med-nips-2018" title="link">[med-neurips 2018]
+									</a>
+									<a href="https://www.doc.ic.ac.uk/~bglocker/public/mednips2018/med-nips_2018_paper_54.pdf" title="link">[pdf]
+									</a>
+									</span></br>
+									<span>[3] Alex G. Raman, Karthik V. Sarma,<b> Wen Shi*</b>, Steve Zhou, Alan M. Priester, Shyam Natarajan, William Speier, Steven S. Raman, Leonard S. Marks, Corey W. Arnold. (2018). A Machine Learning Model for Predicting Cancer Presence in Prostate Biopsy Targets using MRI, <b> American Urological Association Annual Meeting 2019 </b> </span></br>
+									<span>[4] Shuoqiu Gan, <b>Wen Shi*</b>, Yingxiang Sun, Lijun Bai, Ming Zhang. (2019). Mild traumatic brain injury accelerates progressive brain ageing, <b> ISMRM 2019 </b> (Oral) </span></br>
 									</div>
 								</div>
 							</section>
