--- a/pages/homepage.html
+++ b/pages/homepage.html
@@ -18,7 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="../images/avatar1.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Wen (Allard) Shi</a></h1>
-					<p> Welcome! My research mainly focuses on developing innovative neuroimaging techniques, particularly MRI, and neuroinformatics.<br/></p>
+					<p> Welcome! My research mainly focuses on developing innovative neuroimaging techniques, particularly with MRI and EEG, and neuroinformatics.<br/></p>
 				</header>
 				<header>
 					<span class="image avatar"><img src="../images/avatar2.jpg" alt="" /></span>
@@ -97,7 +97,7 @@
 											<a href="#" class="image"><img src="../images/pic01.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>PET co-inventor Prof. Phelps</h4>
-												<p>It's my honor to meet you and listen to your story. Positron Emission Computed Tomography (PET) was a great invention in human history. And it can get better if combined with more modalities. A good lecture by Prof. Phelps who is a great boxer in his whole life!</p>
+												<p>It is my honor to meet you and listen to your story. Positron Emission Computed Tomography (PET) was a great invention in human history, though it can get better if combined with more modalities. A good lecture by Prof. Phelps, a great boxer in his whole life!</p>
 											</div>
 										</article>
 										<article>
@@ -131,11 +131,24 @@
 											<a href="#" class="image"><img src="../images/pic06.JPG" alt="" /></a>
 											<div class="inner">
 												<h4>Graduation - さよなら XJTU  </h4>
-												<p>There are so many memorable experiences during this four-year undergraduate program. Together we grew up in this campus and met so many great people. I can evem remember all the trails we walk and all the words we talk. XJTU is where we will always miss, recall and love forever. </p>
+												<p>So many memorable experiences during this four-year undergraduate program. Together grew up in this campus and met so many great people. I can evem remember all the trails we walk and all the words we talk. XJTU is where we will miss, recall and love forever. </p>
 											</div>
 										</article>
 									</div>
 									<p>The theme of 2020: Uncertainty and Accumulation</p>
+									<div class="features">
+										<article>
+											<a href="#" class="image"><img src="../images/pic07.JPG" alt="" /></a>
+											<div class="inner">
+												<h4>2020 行路难</h4>
+												<p> A difficult year for all. We went through many tough periods this year but everything is stil moving on. Never lose hope and be cherish your life. We will meet at the end. Happy to see we make it at the first step this year and hope everthing will be fine in the next year. 博观而约取，厚积而薄发。</p>
+											</div>
+										</article>
+									</div>
+
+
+
+
 								</div>
 							</section>
 
@@ -178,7 +191,7 @@
 									<h3>Publications</h3>
 									<h4>Journal</h4>
 									<div class = "container">
-									<span>[1] <b> Wen Shi</b>, Guohui Yan, <b>Yamin Li</b>, Haotian Li, Tingting Liu, Cong Sun, Guangbin Wang, Yi Zhang, Yu Zou, Dan Wu. Fetal brain age estimation and anomaly detection using attention-based deep ensembles with uncertainty. <b>Neuroimage</b>, 2020, 117316. doi: 
+									<span>[1] <b> Wen Shi</b>, Guohui Yan, <b>Yamin Li</b>, Haotian Li, Tingting Liu, Cong Sun, Guangbin Wang, Yi Zhang, Yu Zou, Dan Wu. Fetal brain age estimation and anomaly detection using attention-based deep ensembles with uncertainty. <b>NeuroImage</b>, 2020, 117316. doi: 
 									<a href="https://doi.org/10.1016/j.neuroimage.2020.117316" title="link">10.1016/j.neuroimage.2020.117316.</a></span></br>
 									
 									<span>[2] <b> Yamin Li</b><sup>†</sup>, <b>Wen Shi</b><sup>†</sup>, Zhian Liu, Jing Li, Qiang Wang, Xiangguo Yan, Zehong Cao, Gang Wang. Effective brain state estimation during propofol-induced sedation using advanced EEG microstate spectral analysis. <b>IEEE Journal of Biomedical and Health Informatics</b>. doi: 
